--- a/index.html
+++ b/index.html
@@ -1,99 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dark Themed Bootstrap Page</title>
-    <!-- Bootstrap CSS (Dark Mode) -->
-    <link
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-    >
-    <style>
-        body {
-            background-color: #121212; /* Dark background */
-            color: #e0e0e0; /* Light text */
-        }
-        .navbar-dark .navbar-brand {
-            color: #ffffff;
-        }
-        .navbar-dark .nav-link {
-            color: #e0e0e0;
-        }
-    </style>
-</head>
-<body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
-        <div class="container">
-            <a class="navbar-brand" href="#">My Website</a>
-            <button
-                class="navbar-toggler"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarNav"
-                aria-controls="navbarNav"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-            >
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Services</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+---
+layout: default
+title: Home
+---
+<!-- Hero Section -->
+<header class="py-5">
+    <div class="container text-center">
+        <h1 class="display-4">Welcome to SKoprek page</h1>
+        <p class="lead">A simple, dark-themed layout built with Bootstrap.</p>
+        <a href="#" class="btn btn-primary btn-lg">Get Started</a>
+    </div>
+</header>
 
-    <!-- Hero Section -->
-    <header class="py-5">
-        <div class="container text-center">
-            <h1 class="display-4">Welcome to My Dark Themed Page</h1>
-            <p class="lead">A simple, dark-themed layout built with Bootstrap.</p>
-            <a href="#" class="btn btn-primary btn-lg">Get Started</a>
+<!-- Main Content -->
+<main class="container my-5">
+    <div class="row">
+        <div class="col-md-4">
+            <h2>Section 1</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur euismod velit at purus tempor, non fermentum arcu tincidunt.</p>
         </div>
-    </header>
-
-    <!-- Main Content -->
-    <main class="container my-5">
-        <div class="row">
-            <div class="col-md-4">
-                <h2>Section 1</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur euismod velit at purus tempor, non fermentum arcu tincidunt.</p>
-            </div>
-            <div class="col-md-4">
-                <h2>Section 2</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur euismod velit at purus tempor, non fermentum arcu tincidunt.</p>
-            </div>
-            <div class="col-md-4">
-                <h2>Section 3</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur euismod velit at purus tempor, non fermentum arcu tincidunt.</p>
-            </div>
+        <div class="col-md-4">
+            <h2>Section 2</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur euismod velit at purus tempor, non fermentum arcu tincidunt.</p>
         </div>
-    </main>
-
-    <!-- Footer -->
-    <footer class="bg-dark text-center text-white py-4">
-        <div class="container">
-            <p>&copy; 2025 My Website. All rights reserved.</p>
+        <div class="col-md-4">
+            <h2>Section 3</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur euismod velit at purus tempor, non fermentum arcu tincidunt.</p>
         </div>
-    </footer>
-
-    <!-- Bootstrap Bundle JS -->
-    <script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-    ></script>
-</body>
-</html>
+    </div>
+</main>
